config: add half-screen scroll + better UX
- screen scroll conforming to unix world:
  - alt-u/d = half screen up/down
  - alt-b/f = full screen up/down
  - TODO - fix added launch-terminal command
- higher contrast, smaller font
- use xsel for clipboard instead of xclip

--- a/st.1
+++ b/st.1
@@ -128,8 +128,14 @@ even without it.
 .B Alt-j/k or Alt-Up/Down or Alt-Mouse Wheel
 Scroll up/down one line at a time.
 .TP
-.B Alt-u/d or Alt-Page Up/Page Down
+.B Alt-b/f or Alt-Page Up/Page Down
 Scroll up/down one screen at a time.
+.TP
+.B Alt-u/d
+Scroll up/down a half screen at a time.
+.TP
+.B Ctrl-Shift-n
+Launch new terminal at current directory
 .TP
 .B Alt-Shift-k/j or Alt-Shift-Page Up/Page Down or Alt-Shift-Mouse Wheel
 Increase or decrease font size.
